After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737874 - fails to build because of PyGI* redefinitions
fails to build because of PyGI* redefinitions
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: general
3.14.x
Other OpenBSD
: Normal major
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-04 08:07 UTC by Antoine Jacoutot
Modified: 2014-10-28 03:34 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Antoine Jacoutot 2014-10-04 08:07:38 UTC
Hi.

Trying to build pygobject 3.14.0 fails with:

/usr/bin/libtool  --tag=CC   --mode=compile cc -DHAVE_CONFIG_H -I. -I..  -I/usr/local/include/python2.7 -I/usr/local/include/python2.7 -DPY_SSIZE_T_CLEAN -I/usr/local/include   -I/usr/local/include/python2.7 -I/usr/local/include/python2.7 -DPY_SSIZE_T_CLEAN -pthread -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -I/usr/local/include/gobject-introspection-1.0 -pthread -I/usr/local/include -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -O2 -pipe -Wall -Werror=unused-variable -fno-strict-aliasing -Werror=declaration-after-statement  -Wall -Wstrict-prototypes -Wnested-externs -Werror=missing-prototypes -Werror=implicit-function-declaration -Werror=pointer-arith -Werror=init-self -Werror=format=2 -Werror=missing-include-dirs   -MT _gi_la-gobjectmodule.lo -MD -MP -MF .deps/_gi_la-gobjectmodule.Tpo -c -o _gi_la-gobjectmodule.lo `test -f 'gobjectmodule.c' || echo './'`gobjectmodule.c
cc -DHAVE_CONFIG_H -I. -I.. -I/usr/local/include/python2.7 -I/usr/local/include/python2.7 -DPY_SSIZE_T_CLEAN -I/usr/local/include -I/usr/local/include/python2.7 -I/usr/local/include/python2.7 -DPY_SSIZE_T_CLEAN -pthread -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -I/usr/local/include/gobject-introspection-1.0 -pthread -I/usr/local/include -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -O2 -pipe -Wall -Werror=unused-variable -fno-strict-aliasing -Werror=declaration-after-statement -Wall -Wstrict-prototypes -Wnested-externs -Werror=missing-prototypes -Werror=implicit-function-declaration -Werror=pointer-arith -Werror=init-self -Werror=format=2 -Werror=missing-include-dirs -MT _gi_la-gobjectmodule.lo -MD -MP -MF .deps/_gi_la-gobjectmodule.Tpo -c gobjectmodule.c -fPIC -DPIC -o .libs/_gi_la-gobjectmodule.o
In file included from pygi-error.h:26,
                 from gobjectmodule.c:40:
pygi-cache.h:210: error: redefinition of typedef 'PyGIFunctionCache'
pygi-cache.h:34: error: previous declaration of 'PyGIFunctionCache' was here
pygi-cache.h:216: error: redefinition of typedef 'PyGIVFuncCache'
pygi-cache.h:35: error: previous declaration of 'PyGIVFuncCache' was here
Error while executing cc -DHAVE_CONFIG_H -I. -I.. -I/usr/local/include/python2.7 -I/usr/local/include/python2.7 -DPY_SSIZE_T_CLEAN -I/usr/local/include -I/usr/local/include/python2.7 -I/usr/local/include/python2.7 -DPY_SSIZE_T_CLEAN -pthread -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -I/usr/local/include/gobject-introspection-1.0 -pthread -I/usr/local/include -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -O2 -pipe -Wall -Werror=unused-variable -fno-strict-aliasing -Werror=declaration-after-statement -Wall -Wstrict-prototypes -Wnested-externs -Werror=missing-prototypes -Werror=implicit-function-declaration -Werror=pointer-arith -Werror=init-self -Werror=format=2 -Werror=missing-include-dirs -MT _gi_la-gobjectmodule.lo -MD -MP -MF .deps/_gi_la-gobjectmodule.Tpo -c gobjectmodule.c -fPIC -DPIC -o .libs/_gi_la-gobjectmodule.o
Makefile:731: recipe for target '_gi_la-gobjectmodule.lo' failed
Comment 1 Antoine Jacoutot 2014-10-25 16:53:27 UTC
Gentle reminder about this issue...