Remove redefinitions of function and vfunc cache typedefs

https://bugzilla.gnome.org/show_bug.cgi?id=737874